--- a/src/assets/stylesheets/style.css
+++ b/src/assets/stylesheets/style.css
@@ -14,545 +14,17 @@ html {
 	padding: 0;
 }
 
+*:focus {
+	outline-width: 0
+}
+
 body {
 	/*min-width: 500px;*/
 	background-color: #c6c9ce;
 	height: 100%;
 	width: 100%;
-	min-width: 1300px;
+	min-width: 950px;
 	border: 1px dotted gold;
 	/*min-height: 1000px;*/
 
 }
-
-.home-component {
-	height: 100%;
-	width: 100%;
-}
-
-.main-page {
-	margin-top: 52px;
-	height: 100%;
-	width: 100%;
-}
-
-.navbar-top {
-	min-width: 500px;
-	transition: background-color .7s, color .7s;
-	-webkit-transition: background-color .7s, color .7s;
-
-}
-
-
-.navbar-button {
-	font-size: 1em;
-	font-weight: normal;
-	transition: font-size .7s, font-weight: .7s, color .7s;
-	-webkit-transition: font-size .7s, font-weight .7s, color .7s;
-}
-
-.navbar-button:hover {
-	font-size: 1.5em;
-	font-weight: bold;
-	transition: font-size: .7s, font-weight .7s, color .7s;
-	-webkit-transition: font-size .7s, font-weight .7s, color .7s;	
-}
-
-/*.ben-home-button {
-	font-size: 1em;
-	transition: font-size .7s, font-weight: .7s;
-	-webkit-transition: font-size .7s, font-weight .7s;
-
-}
-
-.ben-home-button:hover {
-	font-size: 2em;
-	font-weight: bold;
-	transition: font-size: .7s, font-weight .7s;
-	-webkit-transition: font-size .7s, font-weight .7s;
-
-
-}*/
-
-.dark-class {
-	background-color: #30404d;
-}
-
-.light-class {
-	background-color: white;
-}
-
-.project-description {
-	padding: 2%;
-	text-overflow: hidden;
-}
-
-.linkedin-image {
-	margin: 0 auto;
-	width: 80%;
-}
-
-
-.home-card {
-	width: 70%;
-	height: 20%;
-	padding: 1%;
-	-webkit-transition: width 1s, height 1s, background-color .7s;
-	transition: width 1s, height 1s, background-color .7s;
-	margin: 0 auto;
-	margin-top: 2%;
-	text-align: center;
-	min-height: 100px;
-	min-width: 300px; 
-/*	max-width: 600px;
-	max-height: 140px;*/
-}
-
-.home-card:hover {
-	width: 80%;
-	height: 23%;
-	-webkit-transition: width 1s, height 1s;
-	transition: width 1s, height 1s;
-}
-
-.linkedin-card {
-	padding: 3%;
-
-}
-
-.bandcamp-card {
-	padding-top: 2%;
-}
-
-
-.github-card {
-/*	background-image: url('/assets/png/octocat.png');
-	background-size: cover;*/
-	min-height: 266px;
-	max-height: 600px;
-
-
-}
-
-.github-image {
-	height: 90%;
-	width: 90%;
-	max-height: 550px;
-	max-width: 662px;
-}
-
-.linkedin-image {}
-.bandcamp-image {}
-
-/*.linkedin-card:hover {
-    -webkit-animation-name: spin;
-    -webkit-animation-duration: 250ms;
-    -webkit-animation-iteration-count: 1;
-    -webkit-animation-timing-function: linear;
-    -moz-animation-name: spin;
-    -moz-animation-duration: 250ms;
-    -moz-animation-iteration-count: 1;
-    -moz-animation-timing-function: linear;
-    -ms-animation-name: spin;
-    -ms-animation-duration: 250ms;
-    -ms-animation-iteration-count: 1;
-    -ms-animation-timing-function: linear;
-    
-    animation-name: spin;
-    animation-duration: 250ms;
-    animation-iteration-count: 1;
-    animation-timing-function: linear;
-}*/
-
-
-.bandcamp-card:hover {
-    -webkit-animation-name: spin;
-    -webkit-animation-duration: 500ms;
-    -webkit-animation-iteration-count: 1;
-    -webkit-animation-timing-function: linear;
-    -moz-animation-name: spin;
-    -moz-animation-duration: 500ms;
-    -moz-animation-iteration-count: 1;
-    -moz-animation-timing-function: linear;
-    -ms-animation-name: spin;
-    -ms-animation-duration: 500ms;
-    -ms-animation-iteration-count: 1;
-    -ms-animation-timing-function: linear;
-    
-    animation-name: spin;
-    animation-duration: 500ms;
-    animation-iteration-count: 1;
-    animation-timing-function: linear;
-}	
-
-
-.github-image:hover {
-    -webkit-animation-name: spin;
-    -webkit-animation-duration: 750ms;
-    -webkit-animation-iteration-count: 1;
-    -webkit-animation-timing-function: linear;
-    -moz-animation-name: spin;
-    -moz-animation-duration: 750ms;
-    -moz-animation-iteration-count: 1;
-    -moz-animation-timing-function: linear;
-    -ms-animation-name: spin;
-    -ms-animation-duration: 750ms;
-    -ms-animation-iteration-count: 1;
-    -ms-animation-timing-function: linear;
-    
-    animation-name: spin;
-    animation-duration: 750ms;
-    animation-iteration-count: 1;
-    animation-timing-function: linear;
-}
-
-@-ms-keyframes spin {
-    from { -ms-transform: rotate(0deg); }
-    to { -ms-transform: rotate(360deg); }
-}
-@-moz-keyframes spin {
-    from { -moz-transform: rotate(0deg); }
-    to { -moz-transform: rotate(360deg); }
-}
-@-webkit-keyframes spin {
-    from { -webkit-transform: rotate(0deg); }
-    to { -webkit-transform: rotate(360deg); }
-}
-@keyframes spin {
-    from {
-        transform:rotate(0deg);
-    }
-    to {
-        transform:rotate(360deg);
-    }
-}
-
-.project-card {
-	height: 300px;
-	width: 80%;
-	min-width: 200px;
-	margin: 0 auto;
-	text-align: center;
-	margin-top: 5%;
-	text-overflow: ellipsis;
-	padding: 5%;
-	font-size: 1em;
-	font-weight: normal;
-	transition: font-size .5s, font-weight: .5s, background-color .7s;
-	-webkit-transition: font-size .5s, font-weight .5s, background-color .7s;
-
-	perspective: 800px;
-	transition: transform 1s;
-	/*transform: rotateY(5deg);*/
-	-webkit-transition: transform 1s;
-	/*border: 1px solid green;*/
-	
-}
-
-.project-card:hover {
-	transform-style: preserve-3d;
-	/*transform: rotate3d(360deg, 360deg, 360deg, 1);*/
-	/*transform: rotateZ(360deg);*/
-	transform: rotateY(360deg);
-	transition: transform .75s;
-	-webkit-transition: transform .75s;
-	overflow: auto;
-	font-size: 1.7em;
-	font-weight: bold;
-	transition: font-size: .5s, font-weight .5s;
-	-webkit-transition: font-size .5s, font-weight .5s;	
-
-}
-
-.project-card h1 {
-
-	color: black;
-	transition: color 1s;
-	-webkit-transition: color 1s;
-}
-
-.project-card:hover h1 {
-	color: green;
-	transition: color 1s;
-	-webkit-transition: color 1s;
-}
-
-.music-card {
-	opacity: 1;
-	width: 80%;
-	margin: 0 auto;
-	border-radius: 15%;
-	transition: width: .7s;
-	-webkit-transition: width: .7s;
-	transition: background-color .7s;
-	-webkit-transition: background-color .7s;
-	/*height: 15%;*/
-}
-.music-card:hover {
-	width: 70%;
-	/*opacity: .95;*/
-	transition: width .7s;
-	-webkit-transition: width .7s;
-}
-
-.small-music-player-wrapper {
-	width: 60%;
-	margin: 0 auto;
-	/*transition: opacity .7s, width .7s;*/
-	/*-webkit-transition: opacity .7s, width .7s;*/
-}
-
-.small-music-player {
-	width: 100%;
-	height: 120px;
-	margin: 0 auto;
-	border: 0;
-	/*transition: opacity .7s, width .7s;*/
-	/*-webkit-transition: opacity .7s, width .7s;	*/
-}
-
-
-.beat-to-beat-card {
-	padding: 2%;
-	height: 15%;
-	margin-top: 5%;
-	transition: width .7s, background-color .7s;
-	-webkit-transition: width .7s, background-color .7s;
-
-}
-.stone-country-card {
-	padding: 2%;
-	height: 15%;
-	margin-top: 5%;
-	transition: width .7s, background-color .7s;
-	-webkit-transition: width .7s, background-color .7s;
-
-}
-.shed-a-little-light-card {
-	padding: 2%;
-	height: 15%;
-	margin-top: 80px;
-	transition: width .7s, background-color .7s;
-	-webkit-transition: width .7s, background-color .7s;
-
-}
-
-
-.sushi-and-miniskirts-card {
-	/*height: 60%;*/
-	/*padding: 5px;*/
-	margin: 0 auto;
-	margin-top: 5%;
-	height: 500px;
-	min-height: 500px;
-	max-height: 1000px;
-	position: relative;
-	transition: width .7s, background-color .7s;
-	-webkit-transition: width .7s, background-color .7s;
-}
-
-.sushi-player-wrapper {
-	width: 80%;
-	height: 90%;
-	margin: 0 auto;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	/*border: 1px yellow dotted;*/
-}
-
-.sushi-player {
-	border: 0;
-	width: 31%;
-	height: 100%;
-	/*min-height: 700px;*/
-	margin: 0 auto;
-	/*align: center;*/
-	/*padding: 5px;         */
-
-}
-
-.resume-wrapper {
-	font-size: 1em;
-	font-weight: normal;
-	stroke-dasharray: 4000 4000;
-	stroke-dashoffset: 4000;
-	-webkit-transition: font-size .5s, font-weight .5s, background-color .7s, opacity .5s;
-	transition: font-size .5s, font-weight .5s, background-color .7s, opacity .5s;
-
-}
-
-.resume-wrapper:hover {
-	overflow: auto;
-
-	font-size: 1.5em;
-	font-weight: bold;
-	opacity: .95;
-	stroke-dasharray: 0 0;
-	-webkit-transition: font-size .5s, font-weight .5s, opacity .5s;
-	transition: font-size .5s, font-weight .5s, opacity .5s;
-}
-
-
-.resume-card {
-	height: 40%;
-	width: 80%;
-	margin: 0 auto;
-	text-align: center;
-	/*margin-top: 20%;*/
-	position: absolute;
-	top: 22.5%;
-	left: 10%;
-	text-overflow: ellipsis;
-	padding: 5%;
-	/*min-height: 400px;*/
-
-
-	/*pointer-events: none;*/
-}
-
-.resume-wrapper h1 {
-	color: black;
-	transition: color 1s;
-	-webkit-transition: color 1s;
-}
-
-.resume-wrapper:hover h1 {
-	color: darkblue;
-	transition: color 1s;
-	-webkit-transition: color 1s;
-}
-.wiki-card {
-
-}
-
-.poggle-card {
-	margin-top: 80px;
-
-}
-
-.booki-card {
-
-}
-
-.hangman-card {
-	height: 400px;
-	width: 80%;
-	margin: 0 auto;
-}
-
-
-.letter-tile {
-	border: 1px solid red;
-	height: 100px;
-	width: 100px;
-	text-align: center;
-	display: inline-block;
-	padding: 5px;
-}
-
-.sample-svg-wrapper {
-	margin: 0 auto;
-	position: absolute;
-	height: 45%;
-	width: 88%;
-	top: 20%;
-	left: 6%;
-	z-index: -1;
-	/*transform: translate(50%);*/
-}
-
-.sample-svg {
-	width: 100%;
-	height: 100%;
-	/*background-color: rgba(125, 188, 255, 0.6);*/
-
-/*	transition: stroke-dasharray 2s;
-	-webkit-transition: stroke-dasharray 2s;	*/
-
-/*	transition: stroke-dashoffset .5s;
-	-webkit-transition: stroke-dashoffset .5s;*/
-}
-
-
-.sample-svg-rect {
-	margin: 0 auto;
-	width: 100%;
-	height: 100%;
-	stroke-width: 5;
-	stroke: blue;
-	fill-opacity: 0;
-	transition: stroke-dasharray 2.25s;
-	-webkit-transition: stroke-dasharray 2.25s;
-
-
-}
-
-.add-section-button {}
-.beat {
-	color: darkblue;
-	height: 40px;
-	width: 40px;
-	border: 1px solid red;
-	display: inline-block;
-	text-align: center;
-	position: relative;
-}
-
-.beat-chord {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
-.clicked-beat {
-	background-color: pink;
-
-}
-
-.chord-input {
-	border: none;
-	height:95%;
-	width: 95%;
-	background-color: inherit;
-	text-align: center;
-	display: inline-block;
-}
-
-.chart-maker {
-	height: 100%;
-	width: 100%;
-	min-height: 800px;
-}
-.measure {
-	position: relative;
-	display: inline-block;
-	margin: 5px;
-}
-.measure-display {}
-.section {
-	display: block;
-	margin: 10px;
-}
-.section-display {}
-
-.section-name {}
-.section-name-wrapper {}
-.section-name-input {}
-
-.add-measure-button {
-	height: 50px;
-	width: 50px;
-	color: darkgreen;
-}
-
-.measure-context-menu {
-	width: 100%;
-	height: 50%;
-	position: absolute;
-	bottom: 0;
-}
-
-
