add functionality to save/change/display title of song as well as composer and arranger. some styling tweaks on the sections/measures, reformat the keychanger and its styling as well placed in the top left, add slide in animation to sectiontoolbar

--- a/src/assets/stylesheets/style.css
+++ b/src/assets/stylesheets/style.css
@@ -29,11 +29,19 @@ body {
 
 }
 
+.title-input {}
+
+.root-display {
+	z-index: 10;
+}
+
 .root-box-p {
 	text-align: center;
 	position: absolute;
 	margin: 0 auto;
-	top: 50%;
+	height: 100%;
+	width: 100%;
+	top: 70%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
@@ -90,4 +98,29 @@ body {
 	transition: opacity .3s, font-size .3s, font-weight .3s;
 
 
+}
+
+#slide {
+    position: absolute;
+    left: -1000px;
+    /*width: 100%;*/
+/*    width: 100px;
+    height: 100px;*/
+    /*background: blue;*/
+    -webkit-animation: slide 0.5s forwards;
+    /*-webkit-animation-delay: .5s;*/
+    animation: slide 0.5s forwards;
+    /*animation-delay: .5s;*/
+}
+
+@-webkit-keyframes slide {
+    100% { left: 0; }
+}
+
+@keyframes slide {
+    100% { left: 0; }
+}
+
+.section-toolbar-button {
+	display: inline-block;
 }
