--- a/src/assets/stylesheets/style.css
+++ b/src/assets/stylesheets/style.css
@@ -120,33 +120,85 @@ body {
 	font-size: 1.3em;
 }
 
-.move-section-up-button {}
-.move-section-down-button {}
+.move-section-up-button {
+	border: none;
+	background-color: transparent;
+	color: darkblue;
+	font-size: 1.2em;
+	height: 25px;
+	width: 25px;
+	margin: 2px;
+	text-shadow: 2px 2px darkgray;
+	transition: font-size .3s, color .3s;
+}
+.move-section-down-button {
+	border: none;
+	background-color: transparent;
+	color: white;
+	font-size: 1.2em;
+	height: 25px;
+	width: 25px;
+	margin: 2px;
+	text-shadow: 2px 2px darkgray;
+	transition: font-size .3s, color .3s;
+}
 
-.move-section-up-button:hover {}
-.move-section-down-button:hover {}
+.move-section-up-button:hover {
+	font-size: 1.5em;
+	transition: font-size .3s;
+}
+.move-section-down-button:hover {
+	font-size: 1.5em;
+	transition: font-size .3s, color .3s;
+}
 
-.move-section-up-button:active {}
-.move-section-down-button:active {}
+.move-section-up-button:active {
+	color: skyblue;
+	transition: color .1s;
 
-.remove-measure-button {}
-.remove-measure-button:hover {}
-.remove-measure-button:active {}
+}
+.move-section-down-button:active {
+	color: hotpink;
+	transition: color .1s;
+
+}
+
+.remove-measure-button {
+      border: none;
+      background-color: red;
+      color: white;
+      border-radius: 10px;
+      font-weight: bold;
+      margin: 0 auto;
+      font-size: 1.1em;
+      box-shadow: 10px 8px 10px #888888;
+      transition: box-shadow .3s, font-weight .3s, font-size .3s, background-color .3s;
+}
+.remove-measure-button:hover {
+	/*font-size: 1.1em;*/
+	font-weight: bold;
+    box-shadow: 12px 10px 10px #888888;
+    transition: box-shadow .3s, font-weight .3s, font-size .3s, background-color .3s;	
+}
+.remove-measure-button:active {
+	background-color: darkred;
+	transition: background-color .3s;
+}
 
 .add-measure-button {
-          border: none;
-          background-color: green;
-          color: white;
-          font-size: 1em;
-          font-weight: normal;
-          height: 50px;
-          width: 200px;
-          margin: 2px;
-          border-radius: 10px;
-          /*position: relative;*/
-          text-align: 'center';	
-    	  box-shadow: 10px 8px 10px #888888;
-    	  transition: box-shadow .3s, font-weight .3s, font-size .3s, background-color .3s;
+      border: none;
+      background-color: green;
+      color: white;
+      font-size: 1em;
+      font-weight: normal;
+      height: 50px;
+      width: 200px;
+      margin: 2px;
+      border-radius: 10px;
+      /*position: relative;*/
+      text-align: 'center';	
+	  box-shadow: 10px 8px 10px #888888;
+	  transition: box-shadow .3s, font-weight .3s, font-size .3s, background-color .3s;
 }
 
 .add-measure-button:hover {
@@ -157,7 +209,8 @@ body {
 }
 .add-measure-button:active {
 	background-color: darkgreen;
-	transition: background-color .3s;
+	color: limegreen;
+	transition: background-color .3s, color .1s;
 }
 
 .remove-section-button {
@@ -184,7 +237,8 @@ body {
 }
 .remove-section-button:active {
 	background-color: darkred;
-	transition: background-color .3s;
+	color: hotpink;
+	transition: background-color .3s, color .1s;
 }
 .current-key-box {
 	color: hotpink;
