remove borderbottom from body, prep for heroku

--- a/src/assets/stylesheets/style.css
+++ b/src/assets/stylesheets/style.css
@@ -30,7 +30,7 @@ body {
 	/*min-width: 500px;*/
 	background-color: #e3ecf9;
 	border-top: 5px solid black;
-	border-bottom: 5px solid black;
+	/*border-bottom: 5px solid black;*/
 	border-radius: 25px;
 	height: 100%;
 	width: 100%;
